# web-scraper-rust

./: Cargo.toml  README.md  fileTables.json
src/: compare_survival_rates.rs  main.rs  scraper.rs  scraper_utils.rs  writer.rs
